[package]
name = "wasmtime-testing-helper"
version = "0.1.0"
edition = "2024"

[dependencies.wasmtime]
version = "46"
default-features = false
features = [
	"component-model",
	"cranelift",
	"runtime",
	"std",
]

[dependencies.wasmtime-wasi]
version = "46"
default-features = false
features = [
	"p2",
]
