[package]
name = "wasmtime-testing-helper"
version = "0.1.0"
edition = "2024"

[dependencies.http-body-util]
version = "0.1.3"
optional = true

[dependencies.hyper]
version = "1"
optional = true

[dependencies.wasmtime-wasi-http]
version = "46"
default-features = false
features = ["p2"]
optional = true

[dependencies.wasmtime]
version = "46"
default-features = false
features = ["component-model", "runtime", "std", "winch"]

[dependencies.wasmtime-wasi]
version = "46"
default-features = false
features = ["p2"]

[features]
http = ["dep:wasmtime-wasi-http", "dep:hyper", "dep:http-body-util"]
